Update GC evacuation chart in README.md
- update chart with changes after commit 1c9a8bf
- some cleanup of build output to reduce visual noise
- tweaked a couple of do loops after 82b2085